[package]
name = "soundcloud-rust"
authors = ["Mikkel Kroman", "Max Jöhnk", "Aaron Enberg", "rxzsu"]
version = "0.5.1"
license = "MIT/Apache-2.0"
keywords = ["soundcloud", "http", "api", "client"]
repository = "https://github.com/rxzsu/soundcloud-rs"
description = "SoundCloud API implementation in Rust"
edition = "2024"
rust-version = "1.85"
categories = ["api-bindings"]
readme = "README.md"

[lib]
name = "soundcloud"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "native-tls", "multipart"] }
url = "2.1"
futures = "0.3"
thiserror = "2"
derive_builder = "0.20"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
